--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,8 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
-@import url(https://fonts.googleapis.com/css?family=Lora:400,700);
-
-
 
 
 
@@ -55,6 +52,12 @@ h6,
 .mbr-footer .mbr-contacts strong {
   font-family: 'Montserrat', sans-serif;
 }
+.btn {
+  border-radius: 1.6em;
+}
+.mbr-subscribe .btn {
+  border-radius: 1.6em !important;
+}
 .btn-sm,
 .lead a,
 .lead blockquote,
@@ -62,39 +65,42 @@ h6,
 .mbr-section-hero .mbr-section-lead,
 .mbr-cards .card-subtitle,
 .mbr-testimonial .card-block {
-  font-family: 'Lora', serif;
+  font-family: 'Raleway', sans-serif;
+  font-style: normal;
 }
 .mbr-author-name {
   font-family: 'Montserrat', sans-serif;
 }
 .mbr-author-desc {
-  font-family: 'Lora', serif;
+  font-family: 'Raleway', sans-serif;
+  font-style: normal;
 }
 .mbr-plan-title {
   font-family: 'Montserrat', sans-serif;
 }
 .mbr-plan-subtitle,
 .mbr-plan-price-desc {
-  font-family: 'Lora', serif;
+  font-family: 'Raleway', sans-serif;
+  font-style: normal;
 }
 .bg-primary {
-  background-color: #c0a375 !important;
+  background-color: #00afef !important;
 }
 .bg-success {
-  background-color: #90a878 !important;
+  background-color: #00569f !important;
 }
 .bg-info {
-  background-color: #7e9b9f !important;
+  background-color: #ec068d !important;
 }
 .bg-warning {
-  background-color: #f3c649 !important;
+  background-color: #000000 !important;
 }
 .bg-danger {
-  background-color: #f28281 !important;
+  background-color: #00afef !important;
 }
 .btn-primary {
-  background-color: #c0a375;
-  border-color: #c0a375;
+  background-color: #00afef;
+  border-color: #00afef;
   color: #ffffff;
 }
 .btn-primary:hover,
@@ -103,18 +109,18 @@ h6,
 .btn-primary:active,
 .btn-primary.active {
   color: #ffffff;
-  background-color: #a07e49;
-  border-color: #a07e49;
+  background-color: #0077a3;
+  border-color: #0077a3;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #ffffff !important;
-  background-color: #a07e49 !important;
-  border-color: #a07e49 !important;
+  background-color: #0077a3 !important;
+  border-color: #0077a3 !important;
 }
 .btn-secondary {
-  background-color: #bfcecb;
-  border-color: #bfcecb;
+  background-color: #fac51c;
+  border-color: #fac51c;
   color: #ffffff;
 }
 .btn-secondary:hover,
@@ -123,18 +129,18 @@ h6,
 .btn-secondary:active,
 .btn-secondary.active {
   color: #ffffff;
-  background-color: #94ada8;
-  border-color: #94ada8;
+  background-color: #c59704;
+  border-color: #c59704;
 }
 .btn-secondary.disabled,
 .btn-secondary:disabled {
   color: #ffffff !important;
-  background-color: #94ada8 !important;
-  border-color: #94ada8 !important;
+  background-color: #c59704 !important;
+  border-color: #c59704 !important;
 }
 .btn-info {
-  background-color: #7e9b9f;
-  border-color: #7e9b9f;
+  background-color: #ec068d;
+  border-color: #ec068d;
   color: #ffffff;
 }
 .btn-info:hover,
@@ -143,18 +149,18 @@ h6,
 .btn-info:active,
 .btn-info.active {
   color: #ffffff;
-  background-color: #597478;
-  border-color: #597478;
+  background-color: #a10460;
+  border-color: #a10460;
 }
 .btn-info.disabled,
 .btn-info:disabled {
   color: #ffffff !important;
-  background-color: #597478 !important;
-  border-color: #597478 !important;
+  background-color: #a10460 !important;
+  border-color: #a10460 !important;
 }
 .btn-success {
-  background-color: #90a878;
-  border-color: #90a878;
+  background-color: #00569f;
+  border-color: #00569f;
   color: #ffffff;
 }
 .btn-success:hover,
@@ -163,18 +169,18 @@ h6,
 .btn-success:active,
 .btn-success.active {
   color: #ffffff;
-  background-color: #6a8153;
-  border-color: #6a8153;
+  background-color: #002d53;
+  border-color: #002d53;
 }
 .btn-success.disabled,
 .btn-success:disabled {
   color: #ffffff !important;
-  background-color: #6a8153 !important;
-  border-color: #6a8153 !important;
+  background-color: #002d53 !important;
+  border-color: #002d53 !important;
 }
 .btn-warning {
-  background-color: #f3c649;
-  border-color: #f3c649;
+  background-color: #000000;
+  border-color: #000000;
   color: #ffffff;
 }
 .btn-warning:hover,
@@ -183,18 +189,18 @@ h6,
 .btn-warning:active,
 .btn-warning.active {
   color: #ffffff;
-  background-color: #e1a90f;
-  border-color: #e1a90f;
+  background-color: #000000;
+  border-color: #000000;
 }
 .btn-warning.disabled,
 .btn-warning:disabled {
   color: #ffffff !important;
-  background-color: #e1a90f !important;
-  border-color: #e1a90f !important;
+  background-color: #000000 !important;
+  border-color: #000000 !important;
 }
 .btn-danger {
-  background-color: #f28281;
-  border-color: #f28281;
+  background-color: #00afef;
+  border-color: #00afef;
   color: #ffffff;
 }
 .btn-danger:hover,
@@ -203,19 +209,19 @@ h6,
 .btn-danger:active,
 .btn-danger.active {
   color: #ffffff;
-  background-color: #eb3d3c;
-  border-color: #eb3d3c;
+  background-color: #0077a3;
+  border-color: #0077a3;
 }
 .btn-danger.disabled,
 .btn-danger:disabled {
   color: #ffffff !important;
-  background-color: #eb3d3c !important;
-  border-color: #eb3d3c !important;
+  background-color: #0077a3 !important;
+  border-color: #0077a3 !important;
 }
 .btn-primary-outline {
   background: none;
-  border-color: #8e7041;
-  color: #8e7041;
+  border-color: #006489;
+  color: #006489;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
@@ -223,19 +229,19 @@ h6,
 .btn-primary-outline:active,
 .btn-primary-outline.active {
   color: #ffffff;
-  background-color: #c0a375;
-  border-color: #c0a375;
+  background-color: #00afef;
+  border-color: #00afef;
 }
 .btn-primary-outline.disabled,
 .btn-primary-outline:disabled {
   color: #ffffff !important;
-  background-color: #c0a375 !important;
-  border-color: #c0a375 !important;
+  background-color: #00afef !important;
+  border-color: #00afef !important;
 }
 .btn-secondary-outline {
   background: none;
-  border-color: #85a29c;
-  color: #85a29c;
+  border-color: #ac8404;
+  color: #ac8404;
 }
 .btn-secondary-outline:hover,
 .btn-secondary-outline:focus,
@@ -243,19 +249,19 @@ h6,
 .btn-secondary-outline:active,
 .btn-secondary-outline.active {
   color: #ffffff;
-  background-color: #bfcecb;
-  border-color: #bfcecb;
+  background-color: #fac51c;
+  border-color: #fac51c;
 }
 .btn-secondary-outline.disabled,
 .btn-secondary-outline:disabled {
   color: #ffffff !important;
-  background-color: #bfcecb !important;
-  border-color: #bfcecb !important;
+  background-color: #fac51c !important;
+  border-color: #fac51c !important;
 }
 .btn-info-outline {
   background: none;
-  border-color: #4e6669;
-  color: #4e6669;
+  border-color: #890352;
+  color: #890352;
 }
 .btn-info-outline:hover,
 .btn-info-outline:focus,
@@ -263,19 +269,19 @@ h6,
 .btn-info-outline:active,
 .btn-info-outline.active {
   color: #ffffff;
-  background-color: #7e9b9f;
-  border-color: #7e9b9f;
+  background-color: #ec068d;
+  border-color: #ec068d;
 }
 .btn-info-outline.disabled,
 .btn-info-outline:disabled {
   color: #ffffff !important;
-  background-color: #7e9b9f !important;
-  border-color: #7e9b9f !important;
+  background-color: #ec068d !important;
+  border-color: #ec068d !important;
 }
 .btn-success-outline {
   background: none;
-  border-color: #5d7149;
-  color: #5d7149;
+  border-color: #001f39;
+  color: #001f39;
 }
 .btn-success-outline:hover,
 .btn-success-outline:focus,
@@ -283,19 +289,19 @@ h6,
 .btn-success-outline:active,
 .btn-success-outline.active {
   color: #ffffff;
-  background-color: #90a878;
-  border-color: #90a878;
+  background-color: #00569f;
+  border-color: #00569f;
 }
 .btn-success-outline.disabled,
 .btn-success-outline:disabled {
   color: #ffffff !important;
-  background-color: #90a878 !important;
-  border-color: #90a878 !important;
+  background-color: #00569f !important;
+  border-color: #00569f !important;
 }
 .btn-warning-outline {
   background: none;
-  border-color: #c9970d;
-  color: #c9970d;
+  border-color: #000000;
+  color: #000000;
 }
 .btn-warning-outline:hover,
 .btn-warning-outline:focus,
@@ -303,19 +309,19 @@ h6,
 .btn-warning-outline:active,
 .btn-warning-outline.active {
   color: #ffffff;
-  background-color: #f3c649;
-  border-color: #f3c649;
+  background-color: #000000;
+  border-color: #000000;
 }
 .btn-warning-outline.disabled,
 .btn-warning-outline:disabled {
   color: #ffffff !important;
-  background-color: #f3c649 !important;
-  border-color: #f3c649 !important;
+  background-color: #000000 !important;
+  border-color: #000000 !important;
 }
 .btn-danger-outline {
   background: none;
-  border-color: #e82625;
-  color: #e82625;
+  border-color: #006489;
+  color: #006489;
 }
 .btn-danger-outline:hover,
 .btn-danger-outline:focus,
@@ -323,116 +329,253 @@ h6,
 .btn-danger-outline:active,
 .btn-danger-outline.active {
   color: #ffffff;
-  background-color: #f28281;
-  border-color: #f28281;
+  background-color: #00afef;
+  border-color: #00afef;
 }
 .btn-danger-outline.disabled,
 .btn-danger-outline:disabled {
   color: #ffffff !important;
-  background-color: #f28281 !important;
-  border-color: #f28281 !important;
+  background-color: #00afef !important;
+  border-color: #00afef !important;
 }
 .text-primary {
-  color: #c0a375 !important;
+  color: #00afef !important;
 }
 .text-success {
-  color: #90a878 !important;
+  color: #00569f !important;
 }
 .text-info {
-  color: #7e9b9f !important;
+  color: #ec068d !important;
 }
 .text-warning {
-  color: #f3c649 !important;
+  color: #000000 !important;
 }
 .text-danger {
-  color: #f28281 !important;
+  color: #00afef !important;
 }
 .alert-success {
-  background-color: #90a878;
+  background-color: #00569f;
 }
 .alert-info {
-  background-color: #7e9b9f;
+  background-color: #ec068d;
 }
 .alert-warning {
-  background-color: #f3c649;
+  background-color: #000000;
 }
 .alert-danger {
-  background-color: #f28281;
+  background-color: #00afef;
 }
 .btn-social {
-  border-color: #c0a375;
+  border-color: #00afef;
 }
 .btn-social:hover {
-  background: #c0a375;
+  background: #00afef;
 }
 .mbr-company .list-group-item.active .list-group-text {
-  color: #c0a375;
+  color: #00afef;
 }
 .mbr-footer p a,
 .mbr-footer ul a {
-  color: #c0a375;
+  color: #00afef;
 }
 .mbr-footer-content li::before,
 .mbr-footer .mbr-contacts li::before {
-  background: #c0a375;
+  background: #00afef;
 }
 .mbr-footer-content li a:hover,
 .mbr-footer .mbr-contacts li a:hover {
-  color: #c0a375;
+  color: #00afef;
 }
 .lead a,
 .lead a:hover {
-  color: #c0a375;
+  color: #00afef;
 }
 .lead blockquote {
-  border-color: #c0a375;
+  border-color: #00afef;
 }
 .mbr-plan-header.bg-primary .mbr-plan-subtitle,
 .mbr-plan-header.bg-primary .mbr-plan-price-desc {
-  color: #e8ddcd;
+  color: #bcedff;
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
-  color: #d0dac6;
+  color: #2098ff;
 }
 .mbr-plan-header.bg-info .mbr-plan-subtitle,
 .mbr-plan-header.bg-info .mbr-plan-price-desc {
-  color: #c7d4d5;
+  color: #fdc1e4;
 }
 .mbr-plan-header.bg-warning .mbr-plan-subtitle,
 .mbr-plan-header.bg-warning .mbr-plan-price-desc {
-  color: #ffffff;
+  color: #b3b3b3;
 }
 .mbr-plan-header.bg-danger .mbr-plan-subtitle,
 .mbr-plan-header.bg-danger .mbr-plan-price-desc {
-  color: #ffffff;
+  color: #bcedff;
 }
 .mbr-small-footer a,
 .mbr-gallery-filter li:hover {
-  color: #c0a375;
+  color: #00afef;
 }
-.scrollToTop_wraper {
-  opacity: 0 !important;
+#ext_menu-9 .hide-buttons .nav-btn {
+  display: none !important;
 }
-#msg-box5-h H3 {
+#ext_menu-9 .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-9 .navbar-toggler {
+  color: #000000;
+}
+#ext_menu-9 .close-icon::before,
+#ext_menu-9 .close-icon::after {
+  background-color: #000000;
+}
+#ext_menu-9 .link,
+#ext_menu-9 .dropdown-item {
+  color: #000000;
+}
+#ext_menu-9 .link {
+  font-size: 1rem;
+}
+#ext_menu-9 .dropdown-item,
+#ext_menu-9 .nav-dropdown-sm .link {
+  font-size: 1.083rem;
+}
+#ext_menu-9 .link:hover,
+#ext_menu-9 .dropdown-item:hover,
+#ext_menu-9 .link:focus,
+#ext_menu-9 .dropdown-item:focus {
+  color: #00afef;
+}
+#ext_menu-9 .link[aria-expanded="true"],
+#ext_menu-9 .dropdown-menu {
+  background: #e6e6e6;
+}
+#ext_menu-9 .nav-dropdown-sm .link:focus,
+#ext_menu-9 .nav-dropdown-sm .link:hover,
+#ext_menu-9 .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-9 .nav-dropdown-sm .dropdown-item:hover {
+  background: #f7f7f7!important;
+}
+#ext_menu-9 .navbar,
+#ext_menu-9 .nav-dropdown-sm,
+#ext_menu-9 .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-9 .nav-dropdown-sm .dropdown-menu {
+  background: #ffffff;
+}
+#ext_menu-9 .bg-color.transparent .link {
+  color: #000000;
+  transition: none;
+}
+#ext_menu-9 .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-9 .bg-color.transparent.opened .link:hover,
+#ext_menu-9 .bg-color.transparent.opened .link:focus {
+  color: #00afef;
+}
+#ext_menu-9 .link[aria-expanded="true"],
+#ext_menu-9 .dropdown-item[aria-expanded="true"] {
+  color: #00afef!important;
+}
+#msg-box3-8 .mbr-section-title,
+#msg-box3-8 p {
+  color: #000;
+}
+#msg-box3-8 .mbr-section-title {
+  color: #ffffff;
+}
+#msg-box3-8 .lead P {
+  color: #ffffff;
+}
+#msg-box3-8 .btn {
+  font-size: 14px;
+}
+#features4-7 .card-subtitle {
+  color: #bcbcbc;
+}
+#features4-7 .iconbox {
+  background-color: #00afef;
+  border-color: #00afef;
+}
+#form1-5 .form-control-label {
+  color: #ffffff;
+}
+#form1-5 .mbr-section-title {
+  color: #ffffff;
+}
+#form1-5 SMALL {
+  color: #cccccc;
+  font-family: 'Raleway', sans-serif;
+}
+/* Custom CSS */
+.navbar-dropdown .navbar-logo img {
+    height: auto !important;
+    width: 100%;
+    max-width: 500px;
+}
+.mbr-section.bindery {
+  margin-bottom: 60px;
+}
+.scroll-down-arrow {
+  padding-top: 30px;
+  display: none;
+}
+@media (max-width: 415px) {
+  .mbr-section.mbr-parallax-background {
+    padding-bottom: 60px !important;
+  }
+  .scroll-down-arrow {
+    display: block;
+  }
+}
+/*.mbr-arrow-up-icon::before {
+    left: 0 !important;
+}*/
+#success_page {
+    color: #fac51c;
+}
+#features7-4 .card-block,
+#features7-4 .card-text {
   text-align: left;
 }
-#msg-box5-h P {
-  text-align: left;
+.mbr-cards-col.bindery {
+  background: url('../../images/bindery-1400x933-overlay.jpg');
+  background-size: cover;
+  color: #fff;
 }
-#msg-box2-i .mbr-section-title {
-  color: #000000;
+@media (max-width: 800px) {
+  .mbr-cards-col.bindery .container.bindery .mbr-section-title {
+    position: relative;
+    top:100px;
+  }
+  #features7-4 .mbr-cards-col {
+    padding-top: 0px !important;
+    padding-bottom: 40px !important;
+  }
 }
-#msg-box2-i .mbr-section-subtitle {
-  color: #000000;
-  font-family: 'Raleway', sans-serif;
-  font-size: 16px;
+@media (min-width: 992px) {
+  .mbr-cards-col.bindery .container.bindery .mbr-section-title {
+  position: relative;
+    top: 90px !important;
+  }
 }
-#msg-box2-i .mbr-section-subtitle DIV {
-  color: #000000;
-  font-family: 'Raleway', sans-serif;
-  font-size: 16px;
+.mbr-cards-col.bindery .container.bindery .mbr-section-title {
+  position: relative;
+  /*top:40px;*/
+  top: 40px;
 }
-#content7-j P {
-  font-family: 'Raleway', sans-serif;
+#features7-4 .mbr-cards-col {
+    padding-top: 40px !important;
+    padding-bottom: 40px !important;
+  }
+#content5-9 .card {
+  background-color: transparent;
+  border: none;
+  border-radius: none;
+  margin-bottom: 0;
+}
+.mbr-cards .striped.prepress .mbr-cards-col:nth-child(2n+1) {
+    background: transparent;
+    color: #000;
 }
